This push was done via a bash script

--- a/PXRD_report/Other/Information.tex
+++ b/PXRD_report/Other/Information.tex
@@ -1,5 +1,5 @@
 % This defines the title
-\newcommand{\Title}{PXRD}
+\newcommand{\Title}{PXRD lab}
 
 % This defines the course
 \newcommand{\Course}{FYSC23}
