--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -1,3 +1,23 @@
 \section{Introduction}
+
 \section{Theory}
 \cite{hofmann2015}
+
+Transmission, fluorescence, 
+
+Xray diffraction, oscillating E field. When X ray hit the electrons the electrons start o vibrate in that frequency
+- Constructive and destructive interference 
+
+Bragg's law: $n\lambda=PD=2s=2d\sin\theta$
+
+Crystal lattice: fcc, bcc
+
+In powder diffraction we have all possible orientation sof the crystallites and some will be oriented in the right way for diffraction. Give rise to powder diffraction rings. 
+
+Scherrer's formula
+\begin{equation}
+    t=\frac{k\lambda}{\beta\cos\theta}
+\end{equation}
+
+Structure factor: Se photos 
+
