This push was done via a bash script

--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -19,5 +19,5 @@ Scherrer's formula
     t=\frac{k\lambda}{\beta\cos\theta}
 \end{equation}
 
-Structure factor: Se photos 
+Structure factor: Se photos. For a simple cubic we see all peaks, for bcc and fcc we loose some peaks. 
 
