--- a/PXRD_report/Textfiles/2.Method.tex
+++ b/PXRD_report/Textfiles/2.Method.tex
@@ -1,1 +1,14 @@
 \section{Method}
+The energy of the x-rays are \SI{17.45}{\kilo\electronvolt}. 
+
+The detector uses six semiconductors. 
+
+Calibrations of hex.., this is good since we have a lot of diffraction rings.  
+
+1. Put in all the data
+2. mask out dead spots
+3. Tell where the rings are 
+4. The image is converted to an intensity plot (Note that the x-axis is in $2\theta$). 
+
+
+Hot pixel, high peak with no width. The pixel can be burnt out. 
