--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -7,7 +7,7 @@
 
 \subsection{Diffraction}
 
-\subsection{Powder X-ray diffraction}
+\subsection{Powder X-ray Diffraction}
 
 Transmission, fluorescence, 
 
