added the exercises to answer

--- a/PXRD_report/Other/Information.tex
+++ b/PXRD_report/Other/Information.tex
@@ -1,5 +1,5 @@
 % This defines the title
-\newcommand{\Title}{PXRD lab}
+\newcommand{\Title}{Powder X-ray Diffraction Lab}
 
 % This defines the course
 \newcommand{\Course}{FYSC23}
