first exercise done

--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -5,6 +5,14 @@
 
 \subsection{Crystal Lattice Structure}
 
+To calculate the distance between planes the formula 
+\begin{equation}
+\frac{1}{d^2}=\frac{h^2}{a^2}+\frac{k^2}{b^2}+\frac{l^2}{c^2}.
+\end{equation}
+If we use this formula for a simple cubic with $a=b=c=\SI{0.432}{\nano\m}$ for the plane(111) we get the separation to $d=\SI{0.249}{\nano\m}$. If we do the same for the plane (211) we obtain a separation of $d=\SI{0.176}{\nano\m}$ and for the plane (100) we get $d=\SI{0.432}{\nano\m}$. 
+
+
+
 \subsection{Diffraction}
 
 \subsection{Powder X-ray Diffraction}
@@ -17,6 +25,11 @@ Xray diffraction, oscillating E field. When X ray hit the electrons the electron
 Bragg's law: $n\lambda=PD=2s=2d\sin\theta$
 
 Crystal lattice: fcc, bcc
+
+\begin{equation}
+    n\lambda=2d \sin \theta
+    \label{eq:Bragg}
+\end{equation}
 
 In powder diffraction we have all possible orientation sof the crystallites and some will be oriented in the right way for diffraction. Give rise to powder diffraction rings. 
 
