--- a/PXRD_report/Textfiles/3.Result.tex
+++ b/PXRD_report/Textfiles/3.Result.tex
@@ -1,4 +1,4 @@
-\section{Result}
+\section{Questions}
 
 \begin{enumerate}
     \item Calculate the separations of the planes (111), (211), and (100) in a crystal in which the simple cubic unit cell has the side \( a = 0.432 \, \text{nm} \).
@@ -22,6 +22,11 @@
     \item[(b)] Although this contribution affected the estimation you made in Exercise 7, it can be quantified to obtain a more exact crystallite size. Can you think of at least one other phenomenon or instrumental property that can affect the peak widths?
 \end{enumerate}
 
+\section{Result}
+
+
+
+
 \begin{figure}[H]
     \centering
     \begin{subfigure}[b]{0.99\textwidth} 
@@ -43,7 +48,7 @@
     \caption{Fitting results for Sample 1}
     \begin{tabular}{|c|c|c|c|}
     \hline
-    Peak & Amplitude & Mean & FWHM \\
+    Peak & Amplitude & Mean Angle & FWHM \\
     \hline
     Peak 1 & \SI{41.29(2.15)}{units} & \SI{0.15362(0.00010)}{radians} & \SI{0.00388(0.00023)}{radians} \\
     \hline
@@ -63,7 +68,7 @@
     \caption{Fitting results for Sample 2}
     \begin{tabular}{|c|c|c|c|}
     \hline
-    Peak & Amplitude & Mean & FWHM \\
+    Peak & Amplitude & Mean Angle & FWHM \\
     \hline
     Peak 1 & \SI{10.77(0.62)}{units} & \SI{0.17746(0.00012)}{radians} & \SI{0.00404(0.00034)}{radians} \\
     \hline
@@ -73,3 +78,4 @@
     \hline
     \end{tabular}
 \end{table}
+
