second exercise done

--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -15,6 +15,13 @@ If we use this formula for a simple cubic with $a=b=c=\SI{0.432}{\nano\m}$ for t
 
 \subsection{Diffraction}
 
+To evaluate diffraction patterns Bragg's law is mainly used, with is defined as
+\begin{equation}
+    n\lambda=2d\sin \theta,
+    \label{eq:Bragg}
+\end{equation}
+where $n$ is an integer, $\lambda$ is the wavelength of the incoming photon, $d$ is the spacing between the planes and $\theta$ is the scattering angle. Using this we see that if the incoming x-ray has a wavelength of \SI{0.07}{\nano\m} we can at minimum spacing which can be observed is \SI{0.35}{\angstrom}. In order to observe smaller spacings, a higher photon energy would have to be used. 
+
 \subsection{Powder X-ray Diffraction}
 
 Transmission, fluorescence, 
@@ -26,10 +33,6 @@ Bragg's law: $n\lambda=PD=2s=2d\sin\theta$
 
 Crystal lattice: fcc, bcc
 
-\begin{equation}
-    n\lambda=2d \sin \theta
-    \label{eq:Bragg}
-\end{equation}
 
 In powder diffraction we have all possible orientation sof the crystallites and some will be oriented in the right way for diffraction. Give rise to powder diffraction rings. 
 
