third exercise is done

--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -8,6 +8,7 @@
 To calculate the distance between planes the formula 
 \begin{equation}
 \frac{1}{d^2}=\frac{h^2}{a^2}+\frac{k^2}{b^2}+\frac{l^2}{c^2}.
+\label{eq:seperation}
 \end{equation}
 If we use this formula for a simple cubic with $a=b=c=\SI{0.432}{\nano\m}$ for the plane(111) we get the separation to $d=\SI{0.249}{\nano\m}$. If we do the same for the plane (211) we obtain a separation of $d=\SI{0.176}{\nano\m}$ and for the plane (100) we get $d=\SI{0.432}{\nano\m}$. 
 
@@ -21,6 +22,8 @@ To evaluate diffraction patterns Bragg's law is mainly used, with is defined as
     \label{eq:Bragg}
 \end{equation}
 where $n$ is an integer, $\lambda$ is the wavelength of the incoming photon, $d$ is the spacing between the planes and $\theta$ is the scattering angle. Using this we see that if the incoming x-ray has a wavelength of \SI{0.07}{\nano\m} we can at minimum spacing which can be observed is \SI{0.35}{\angstrom}. In order to observe smaller spacings, a higher photon energy would have to be used. 
+
+For example if we have a (111) plane with an  incident angle \( \theta = 11.2^\circ \) when X-rays of wavelength of \( 0.154 \, \text{nm} \) then the side of the side of each unit cell can be calculated as follows: From \autoref{eq:Bragg} we obtain a the distance planer separation to $d=\SI{0.397}{\nano\m}$, from \autoref{eq:seperation} we obtain that a separation of $d=\SI{0.397}{\nano\m}$ leads to a lattice constant of $a=\SI{6.36}{\angstrom}$ for a simple cubic. 
 
 \subsection{Powder X-ray Diffraction}
 
