--- a/PXRD_report/Textfiles/3.Result.tex
+++ b/PXRD_report/Textfiles/3.Result.tex
@@ -3,7 +3,7 @@
 \begin{enumerate}
     \item Calculate the separations of the planes (111), (211), and (100) in a crystal in which the simple cubic unit cell has the side \( a = 0.432 \, \text{nm} \). \textbf{DONE}
     \item From Bragg’s equation, what is the minimum d-spacing that can be observed with a wavelength of \( 0.07 \, \text{nm} \)? What do you need in order to observe smaller d spacings? \textbf{DONE}
-    \item Reflection from the (111) planes of a cubic crystal was observed at an incident angle \( \theta = 11.2^\circ \) when Cu K\(\alpha\) X-rays of wavelength \( 0.154 \, \text{nm} \) were used. What is the length of the side of the unit cell?
+    \item Reflection from the (111) planes of a cubic crystal was observed at an incident angle \( \theta = 11.2^\circ \) when Cu K\(\alpha\) X-rays of wavelength \( 0.154 \, \text{nm} \) were used. What is the length of the side of the unit cell? \textbf{DONE}
     \item Calcium carbonate crystals in the form of aragonite have an orthorhombic unit cell with dimensions \( a = 0.574 \, \text{nm} \), \( b = 0.796 \, \text{nm} \), \( c = 0.495 \, \text{nm} \). Calculate the incident angles for the (100), (010), and (111) reflections using radiation of wavelength \( 0.083 \, \text{nm} \).
     \item Calculate the allowed values of \( hkl \) for a body-centered cubic (bcc) and face-centered cubic (fcc) system that will give Bragg points on a diffraction pattern.
     \item Find the two elements.
