fourth exercise done, 1-4 are located in the theory section

--- a/PXRD_report/Textfiles/3.Result.tex
+++ b/PXRD_report/Textfiles/3.Result.tex
@@ -48,17 +48,17 @@
     \caption{Fitting results for Sample 1}
     \begin{tabular}{|c|c|c|c|}
     \hline
-    Peak & Amplitude & Mean Angle & FWHM \\
+    Peak & Angle $\theta$ (radians) & Standard deviation $\sigma$ (radians) & FWHM (radians) \\
     \hline
-    Peak 1 & \SI{41.29(2.15)}{units} & \SI{0.15362(0.00010)}{radians} & \SI{0.00388(0.00023)}{radians} \\
+    Peak 1 & \SI{0.15362(0.00010)}{} & \SI{0.00165(0.00010)}{} & \SI{0.00388(0.00023)}{} \\
     \hline
-    Peak 2 & \SI{16.28(1.14)}{units} & \SI{0.17731(0.00019)}{radians} & \SI{0.00535(0.00046)}{radians} \\
+    Peak 2 & \SI{0.17731(0.00019)}{} & \SI{0.00227(0.00020)}{} & \SI{0.00535(0.00046)}{} \\
     \hline
-    Peak 3 & \SI{10.57(0.71)}{units} & \SI{0.25180(0.00018)}{radians} & \SI{0.00550(0.00043)}{radians} \\
+    Peak 3 & \SI{0.25180(0.00018)}{} & \SI{0.00234(0.00018)}{} & \SI{0.00550(0.00043)}{} \\
     \hline
-    Peak 4 & \SI{11.53(0.66)}{units} & \SI{0.29569(0.00015)}{radians} & \SI{0.00530(0.00035)}{radians} \\
+    Peak 4 & \SI{0.29569(0.00015)}{} & \SI{0.00225(0.00015)}{} & \SI{0.00530(0.00035)}{} \\
     \hline
-    Peak 5 & \SI{4.51(0.19)}{units} & \SI{0.30900(0.00015)}{radians} & \SI{0.00616(0.00049)}{radians} \\
+    Peak 5 & \SI{0.30900(0.00015)}{} & \SI{0.00261(0.00021)}{} & \SI{0.00616(0.00049)}{} \\
     \hline
     \end{tabular}
 \end{table}
@@ -68,14 +68,13 @@
     \caption{Fitting results for Sample 2}
     \begin{tabular}{|c|c|c|c|}
     \hline
-    Peak & Amplitude & Mean Angle & FWHM \\
+    Peak & Angle $\theta$ (radians) & Standard deviation $\sigma$ (radians) & FWHM (radians) \\
     \hline
-    Peak 1 & \SI{10.77(0.62)}{units} & \SI{0.17746(0.00012)}{radians} & \SI{0.00404(0.00034)}{radians} \\
+    Peak 1 & \SI{0.17746(0.00012)}{} & \SI{0.00172(0.00014)}{} & \SI{0.00404(0.00034)}{} \\
     \hline
-    Peak 2 & \SI{3.20(0.09)}{units} & \SI{0.25186(0.00017)}{radians} & \SI{0.00895(0.00092)}{radians} \\
+    Peak 2 & \SI{0.25186(0.00017)}{} & \SI{0.00380(0.00039)}{} & \SI{0.00895(0.00092)}{} \\
     \hline
-    Peak 3 & \SI{3.34(0.10)}{units} & \SI{0.30942(0.00014)}{radians} & \SI{0.00768(0.00056)}{radians} \\
+    Peak 3 & \SI{0.30942(0.00014)}{} & \SI{0.00326(0.00024)}{} & \SI{0.00768(0.00056)}{} \\
     \hline
     \end{tabular}
 \end{table}
-
