--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -25,6 +25,9 @@ where $n$ is an integer, $\lambda$ is the wavelength of the incoming photon, $d$
 
 For example if we have a (111) plane with an  incident angle \( \theta = 11.2^\circ \) when X-rays of wavelength of \( 0.154 \, \text{nm} \) then the side of the side of each unit cell can be calculated as follows: From \autoref{eq:Bragg} we obtain a the distance planer separation to $d=\SI{0.397}{\nano\m}$, from \autoref{eq:seperation} we obtain that a separation of $d=\SI{0.397}{\nano\m}$ leads to a lattice constant of $a=\SI{6.36}{\angstrom}$ for a simple cubic. 
 
+Another example for a orthorhombic unit cell with dimensions $a=\SI{5.74}{\angstrom}$, $b=\SI{7.96}{\angstrom}$ and $c=\SI{4.95}{\angstrom}$ one can calculate the incident angles for the (100), (010), and
+(111) planes if the  wavelength is \SI{0.083}{\nano\m}. For the (100) plane \autoref{eq:seperation} gives a planar separation of $d_{(100)}=\SI{0.574}{\nano\m}$, (010) gives $d_{(111)}=\SI{0.796}{\nano\m}$ and (111) gives $d_{(111)}=\SI{0.339}{\nano\m}$. Using \autoref{eq:Bragg} the following angles are found: $\theta_{(100)} = \SI{4.15}{\degree}$, $\theta_{(010)} = \SI{2.99}{\degree}$ and $\theta_{(111)} = \SI{7.03}{\degree}$.
+
 \subsection{Powder X-ray Diffraction}
 
 Transmission, fluorescence, 
