--- a/PXRD_report/Textfiles/References.bib
+++ b/PXRD_report/Textfiles/References.bib
@@ -7,3 +7,12 @@
   publisher = {Wiley-VCH},
   isbn      = {978-3-527-41161-6}
 }
+
+@manual{solidstatephysics2025,
+    title = {FYSC23: Powder X-ray Diffraction Laboratory Manual},
+    author = {Auden Ti and Hajar Jalili},
+    year = {2025},
+    address = {Lund},
+    publisher = {Lund University},
+    note = {Lab instructors: Auden Ti (\url{auden.ti_yun@sljus.lu.se}) and Hajar Jalili (\url{hajar.jalili@sljus.lu.se})},
+}
