sixth exercise gives weird result, check?

--- a/PXRD_report/Textfiles/3.Result.tex
+++ b/PXRD_report/Textfiles/3.Result.tex
@@ -78,3 +78,9 @@
     \hline
     \end{tabular}
 \end{table}
+
+
+
+????? Using peak 1 from the second sample the and $n=2$, the plane (110) we obtain a spacing $a=\SI{2.8460(0.0019)}{\angstrom}$ which coincides with the material Fe using the given table \cite{solidstatephysics2025}.  
+
+Using peak 2 from the first sample the and $n=2$, the plane (110) we obtain a spacing $a=\SI{2.8484(0.0030)}{\angstrom}$ which coincides with the material Fe using the given table \cite{solidstatephysics2025}.  
