I have now determined the two materials

--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -55,6 +55,12 @@ Above we used Euler's identity which says $\exp(i\pi (n+1/2)+1=0$. We have thus 
 \end{align}
 As shown before, we can see above if one of $h,k,l$ is even and the other are odd (or vice versa) then we get $-1\neq1-1-1$ which is not allowed. However if all $h,k,l$ are even or odd we obtain $-1\neq1+1+1$ which is true. Thus the (h,k,l) is always all odd or all even for the fcc. 
 
+The order of the peaks we will see will be ordered as 
+\begin{equation}
+    \sqrt{h^2+k^2+l^2}.
+    \label{eq:ordering}
+\end{equation}  
+
 
 \subsection{Powder X-ray Diffraction}
 Powder X-ray diffraction (PXRD) is a method of diffraction to analyse crystal structure. In PXRD the sample is a fine powder of many small crystallites instead of a single large crystal \cite{hofmann2015}. This means that the crystal planes will be randomly oriented, and all possible orientations will be present. The diffraction pattern will look like a series of rings, instead of sharp points which arises from single crystal diffraction \cite{hofmann2015}. One of the advantages of powder diffraction is that it is quicker than other methods of analysing crystal structures.
