--- a/PXRD_report/Textfiles/3.Result.tex
+++ b/PXRD_report/Textfiles/3.Result.tex
@@ -5,8 +5,8 @@
     \item From Bragg’s equation, what is the minimum d-spacing that can be observed with a wavelength of \( 0.07 \, \text{nm} \)? What do you need in order to observe smaller d spacings? \textbf{DONE}
     \item Reflection from the (111) planes of a cubic crystal was observed at an incident angle \( \theta = 11.2^\circ \) when Cu K\(\alpha\) X-rays of wavelength \( 0.154 \, \text{nm} \) were used. What is the length of the side of the unit cell? \textbf{DONE}
     \item Calcium carbonate crystals in the form of aragonite have an orthorhombic unit cell with dimensions \( a = 0.574 \, \text{nm} \), \( b = 0.796 \, \text{nm} \), \( c = 0.495 \, \text{nm} \). Calculate the incident angles for the (100), (010), and (111) reflections using radiation of wavelength \( 0.083 \, \text{nm} \). \textbf{DONE}
-    \item Calculate the allowed values of \( hkl \) for a body-centered cubic (bcc) and face-centered cubic (fcc) system that will give Bragg points on a diffraction pattern.
-    \item Find the two elements.
+    \item Calculate the allowed values of \( hkl \) for a body-centered cubic (bcc) and face-centered cubic (fcc) system that will give Bragg points on a diffraction pattern. \textbf{DONE}
+    \item Find the two elements. \textbf{DONE}
     \item Measure the full width at half maximum (FWHM) of each peak of the two diffraction patterns and calculate the crystallite size using Scherrer’s equation. Scherrer’s equation is suitable for particle sizes below approximately \( 100 \, \text{nm} \). Which property of light limits this kind of quantification? 
     \begin{itemize}
         \item \textbf{Hint:} Constructive interference of two waves (and therefore diffraction) does not happen with any kind of light.
@@ -80,7 +80,9 @@
 \end{table}
 
 
+Using peak 1 from the first sample and $n=1$, the plane (111) we obtain a spacing $a=\SI{4.0213(0.0026)}{\angstrom}$ which coincides with the material Au using \autoref{eq:Bragg} and \autoref{eq:seperation} with the given table \cite{solidstatephysics2025}. The first peak coincides with the plane (111) as seen in \autoref{eq:ordering} and all indices are odd which is must be true since Au is a fcc. This verifies this result. 
 
-????? Using peak 1 from the second sample the and $n=2$, the plane (110) we obtain a spacing $a=\SI{2.8460(0.0019)}{\angstrom}$ which coincides with the material Fe using the given table \cite{solidstatephysics2025}.  
+Using peak 2 from the second sample and $n=1$, the plane (110) we obtain a spacing $a=\SI{2.8484(0.0030)}{\angstrom}$ which coincides with the material Fe using \autoref{eq:Bragg} and \autoref{eq:seperation} with the given table \cite{solidstatephysics2025}. The second peak coincides with the plane (110) as seen in \autoref{eq:ordering}, also the sum of the miller indices is even which must be tru for a bcc such as Fe, verifying this result. 
 
-Using peak 2 from the first sample the and $n=2$, the plane (110) we obtain a spacing $a=\SI{2.8484(0.0030)}{\angstrom}$ which coincides with the material Fe using the given table \cite{solidstatephysics2025}.  
+
+
