--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -57,10 +57,10 @@ As shown before, we can see above if one of $h,k,l$ is even and the other are od
 
 The order of the peaks we will see will be ordered as 
 \begin{equation}
-    \sqrt{h^2+k^2+l^2}.
+    \sqrt{h^2+k^2+l^2},
     \label{eq:ordering}
 \end{equation}  
-
+where h, k and l are the miller indices of that specific plane. Thus, for a bcc crystal the peaks will be in the order (110), (200), (211), (220) and so on. For the fcc the peaks will be (111),(200),(220),(311),(222) and so on.  
 
 \subsection{Powder X-ray Diffraction}
 Powder X-ray diffraction (PXRD) is a method of diffraction to analyse crystal structure. In PXRD the sample is a fine powder of many small crystallites instead of a single large crystal \cite{hofmann2015}. This means that the crystal planes will be randomly oriented, and all possible orientations will be present. The diffraction pattern will look like a series of rings, instead of sharp points which arises from single crystal diffraction \cite{hofmann2015}. One of the advantages of powder diffraction is that it is quicker than other methods of analysing crystal structures.
