--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -1,5 +1,5 @@
 \section{Introduction}
-
+Determining the crystal structure of materials is important to understand how these materials behave, a crucial part for developing e.g. medicine, and electronics. Common ways to analyse crystal structure is diffraction experiments, where X-ray diffraction is especially well suited because of the small wavelength on the order of the lattice parameters. The experiment conducted in this report specifically uses a type of X-ray diffraction called powder X-ray diffraction.
 
 \section{Theory}
 \subsection{Crystal Lattice Structure}
