--- a/PXRD_report/Other/Premable.tex
+++ b/PXRD_report/Other/Premable.tex
@@ -34,7 +34,7 @@
 \usepackage{comment} 
 \usepackage{tcolorbox}
 
-
+\sisetup{scientific-notation=true}
 
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{2em}
