--- a/PXRD_report/Textfiles/4.Discussion.tex
+++ b/PXRD_report/Textfiles/4.Discussion.tex
@@ -1,1 +1,6 @@
 \section{Discussion}
+In \autoref{fig:result_figure}, we can identify the peaks using the theory derived above. Since we know that Sample 1 was gold, which has an FCC structure, the first peak corresponds to the (111) plane, the second peak to the (200) plane, the third peak to the (220) plane, the fourth peak to the (331) plane, and the fifth peak to the (222) plane. For the second sample, we know that the material was iron with a BCC structure. This means that the first peak corresponds to the (110) plane, the second peak to the (200) plane, and the third peak to the (211) plane.
+
+The mean size of the gold and Fe powders also seems plausible. It is interesting to note that the iron powder was smaller than the gold powder. Both of these values, however, fall within a reasonable range for powder materials. There was also some variation in the powder size, which is expected since not all particles are exactly the same size.
+
+In \autoref{eq:peak_spectrum}, it was shown that the spectral contribution of the X-ray source to the peak width was related to the spectral bandwidth. However, other factors also contribute to instrumental broadening, such as the width of the X-ray beam, beam divergence, and the resolution of the detector. Additional broadening effects arise due to disorder of the second kind, where atomic fluctuations cause variations in the distances between neighboring atoms. This leads to peak broadening and a decrease in peak height \cite{guinier1963xray}. This effect becomes more pronounced at increasing angles, meaning that it has a greater impact on higher-order peaks.
