--- a/PXRD_report/Textfiles/References.bib
+++ b/PXRD_report/Textfiles/References.bib
@@ -16,3 +16,16 @@
     publisher = {Lund University},
     note = {Lab instructors: Auden Ti (\url{auden.ti_yun@sljus.lu.se}) and Hajar Jalili (\url{hajar.jalili@sljus.lu.se})},
 }
+
+@book{guinier1963xray,
+  author    = {Guinier, A.},
+  title     = {X-Ray Diffraction},
+  year      = {1963},
+  publisher = {WH Freeman},
+  address   = {San Francisco and London}
+  }
+
+
+
+
+
