--- a/PXRD_report/Textfiles/2.Method.tex
+++ b/PXRD_report/Textfiles/2.Method.tex
@@ -1,4 +1,13 @@
 \section{Method}
+The experimental setup consisted of an X-ray source pointing on a sample of powdered crystal. The sample was placed on a diffractometer connected to a computer to control the placement of the sample. Behind the sample was a large area detector used to capture the diffraction rings. The setup can bee seen in \ref{fig:setup}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.7\textwidth]{Figures/setup_letters.jpg}
+    \caption{The experimental setup. \textbf{A} ist he X-ray source, \textbf{B} is the sample, \textbf{C} is the diffractometer and \textbf{D} is the detector.}
+    \label{fig:setup}
+\end{figure}
+
+
 The energy of the x-rays are \SI{17.45}{\kilo\electronvolt}. 
 
 The detector uses six semiconductors. 
