--- a/PXRD_report/Textfiles/1.Introduction.tex
+++ b/PXRD_report/Textfiles/1.Introduction.tex
@@ -74,14 +74,7 @@ where h, k and l are the miller indices of that specific plane. Thus, for a bcc 
 \subsection{Powder X-ray Diffraction}
 Powder X-ray diffraction (PXRD) is a method of diffraction to analyse crystal structure. In PXRD the sample is a fine powder of many small crystallites instead of a single large crystal \cite{hofmann2015}. This means that the crystal planes will be randomly oriented, and all possible orientations will be present. The diffraction pattern will look like a series of rings, instead of sharp points which arises from single crystal diffraction \cite{hofmann2015}. One of the advantages of powder diffraction is that it is quicker than other methods of analysing crystal structures.
 
-
-Transmission, fluorescence, 
-
-Xray diffraction, oscillating E field. When X ray hit the electrons the electrons start o vibrate in that frequency
-- Constructive and destructive interference 
-
-
-Scherrer's formula is used to estimate the size of crystallites based an the broadening of diffraction peaks as 
+Scherrer's formula is used to estimate the size of crystallites based on the broadening of diffraction peaks as 
 \begin{equation}
     t=\frac{k\lambda}{\beta\cos\theta},
     \label{eq:Scherre}
